--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,11 @@
     id= "username"
     name="username" >
 </div>
+<div>
+  <label for= "pswrd" > Password: </label>
+  <input type= "password"
+  id= "pswrd"
+  name= "password">
+</div>
+<input type= "submit"
+  value= "Sign in" >
